# mdspan-cute

./: .buckconfig  .gitignore  BUCK  BUILD.md  CMakeLists.txt  LICENSE  README.md  VERIFICATION.md  example.nix  flake.nix  package.nix  tests.nix
.claude/: settings.local.json
art/: README.md
buck2-toolchains/: BUCK  flake.nix
examples/: simulated_1cta_gemm.cpp  swizzled_tile.cpp
include/mdspan_cute/: layout_cute.h
nix/: _main.nix
nix/checks/: default.nix  tests.nix
nix/devshells/: default.nix
nix/overlays/: default.nix
proof/: ARCHITECTURE.md  BUILD.md  PROOFS.md  PropertyExtract.lean  Razorgirl.lean.bak  VillaStraylight.lean  lake-manifest.json
proof/doc/math/: abstract-algebra.md  logic.md
proof/extracted/cpp/: property_tests  property_tests.hpp  property_tests_catch2.cpp  property_tests_standalone.cpp
src/lean4-proof/: ARCHITECTURE.md  BUCK  BUILD.md  PROOFS.md  PropertyExtract.lean  VillaStraylight.lean  lake-manifest.json  lakefile.lean
src/lean4-proof/doc/math/: integer-division.md  monotonic-function.md
src/lean4-proof/doc/reading/: divisibility-of-split.md  iterdomain.md  tma-modeling-in-depth.md
src/lean4-proof/extracted/cpp/: property_tests.hpp  property_tests_catch2.cpp  property_tests_standalone.cpp
src/mdspan-cute/: BUCK
src/mdspan-cute/examples/: simulated_1cta_gemm.cpp  swizzled_tile.cpp
src/mdspan-cute/include/: mdspan_cute.h
src/mdspan-cute/include/mdspan_cute/: cuda_gcc15_compat.h  layout_cute.h
src/mdspan-cute/tests/: property_tests.cpp  test_layout_cute.cpp
tests/: BUCK  property_tests.cpp  test_layout_cute.cpp
toolchains/: BUCK  cxx.bzl  test_toolchain.bzl
